...

  const { colors, fontSizes } = StylesGuide

  return (
    <GlobalWrapper>
      <View
        testID="signup-profile-screen"
        style={{ flexDirection: 'column', justifyContent: 'center', height: '100%', }}
      >
        <Text
          style={{
            color: colors.dangerLight,
            fontSize: fontSizes.xll,
...
